# aws-eks-typescript-simple

./: .gitignore  .npmrc  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.spinnaker.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
load-balancer/: Pulumi.yaml  __main__.py  pyproject.toml
